[package]
name = "vesting-contract-cli"
version = "0.1.0"
authors = ["Alex Sakai <bestlucky1030@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
solana-clap-utils = "1.11.7"
solana-client = "1.11.7"
solana-program = "1.11.7"
solana-sdk = "1.11.7"
token-vesting =  { version = "0.1.0", path="../program", features=["no-entrypoint"] }
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}
